<resources>
    <string name="app_name">CgtAndroidFormFramework</string>
    <string name="action_reset">Reset</string>

    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="hintProfile">Profile</string>
    <string name="hintAddress">Address</string>
    <string name="hintMale">Male</string>
    <string name="hintFemale">Female</string>
    <string name="hintGender">Select Gender</string>
    <string name="hintRate">Rate yourself</string>
    <string name="hintNotifications">Notifications</string>
    <string name="hintSeekBar">0/10</string>

    <!-- Server Key Names -->
    <string name="key_first_name">first_name</string>
    <string name="key_last_name">last_name</string>
    <string name="key_gender">gender</string>
    <string name="key_email">email</string>
    <string name="key_city">city</string>
    <string name="key_password">password</string>
    <string name="key_profile">profile</string>
    <string name="key_address">address</string>
    <string name="key_rating">rating</string>
    <string name="key_notifications">notifications</string>
    <string name="key_seekvalue">seek_value</string>
    <string name="key_image">image</string>

    <!-- Form Validations -->
    <string name="alert_firstname">First Name should not be blank.</string>
    <string name="alert_lastname">Last Name should not be blank.</string>
    <string name="alert_profile">Profile should not be blank.</string>
    <string name="alert_email">Email should not be blank.</string>
    <string name="alert_city">City should not be blank.</string>
    <string name="alert_gender">Gender should not be blank.</string>
    <string name="alert_password">Password should not be blank.</string>

    <!-- Generalised Validations -->
    <string name="alert_general_empty_field">Field(s) should not be blank.</string>
    <string name="alert_general_invalid_email">Invalid email.</string>
    <string name="alert_general_invalid_password">Invalid password. Password pattern is yet to added.</string>
    <string name="alert_general_invalid_confirm_password">Password not matched. </string>
    <string name="alert_general_compare_password_resource_missing">Password Resource is missing.</string>

    <!-- Font Names -->
    <string name="font_Arial_bd">arialbd.ttf</string>
    <string name="font_BadScript_Regular">BadScript-Regular.ttf</string>
    <string name="font_Brush_script_mt_italic">brush-script-mt-italic.ttf</string>
    <string name="font_SegoeWP_Black">SegoeWP-Black.ttf</string>
    <string name="font_SegoeWP_Bold">SegoeWP-Bold.ttf</string>
    <string name="font_SegoeWP_Light">SegoeWP-Light.ttf</string>

    <!-- Server Interaction -->
    <string name="please_wait">Please wait..</string>

    <string-array name="city_array">
        <item>Select City</item>
        <item>New Delhi</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Chennai</item>

    </string-array>


    <!-- Parse applicationId, clientKey -->
    <string name="parseApplicationId">G8QwDtG57Lfd4WEpzAAISj8soXijy5NDouMWcQCy</string>
    <string name="parseClientKey">HTisUdJexJHIabNbGDUZdw0WhuRSAvRZNYXvkdcB</string>


</resources>
