<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.cgt.android.form.framework.ui.CgtEditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFirstName"
            android:maxLines="1"
            android:singleLine="true"
            app:fontName="@string/font_SegoeWP_Light"
            app:isCompulsory="true"
            app:serverParamKey="@string/key_first_name"
            app:validationMessage="@string/alert_firstname" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.cgt.android.form.framework.ui.CgtEditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintLastName"
            android:maxLines="1"
            android:singleLine="true"
            app:fontName="@string/font_SegoeWP_Light"
            app:isCompulsory="true"
            app:serverParamKey="@string/key_last_name"
            app:validationMessage="@string/alert_lastname" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.cgt.android.form.framework.ui.CgtEditText
            android:id="@+id/profileEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintProfile"
            android:maxLines="1"
            android:singleLine="true"
            app:fontName="@string/font_SegoeWP_Light"
            app:isCompulsory="true"
            app:serverParamKey="@string/key_profile"
            app:validationMessage="@string/alert_profile" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.cgt.android.form.framework.ui.CgtEditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAddress"
            android:maxLines="3"
            android:singleLine="true"
            app:fontName="@string/font_SegoeWP_Light"
            app:isCompulsory="false"
            app:serverParamKey="@string/key_address" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>
